@@ -111,12 +111,19 @@ def main() -> None:
         help="Persistent libvirt checkpoint storage directory",
     )
     opt.add_argument(
-        "-S",
         "--scratchdir",
         default="/var/tmp",
         required=False,
         type=str,
         help="Target dir for temporary scratch file. (default: %(default)s)",
+    )
+    opt.add_argument(
+        "-S",
+        "--start-domain",
+        default=False,
+        required=False,
+        action="store_true",
+        help="Start virtual machine if it is offline. (default: %(default)s)",
     )
     opt.add_argument(
         "-i",
@@ -289,36 +296,6 @@ def main() -> None:
         logging.error("Saving raw images to stdout is not supported.")
         sys.exit(1)
 
-    if (
-        args.level not in ("copy", "full", "auto")
-        and not lib.hasFullBackup(args)
-        and not args.stdout
-    ):
-        logging.error(
-            "Unable to execute [%s] backup: No full backup found in target directory: [%s]",
-            args.level,
-            args.output,
-        )
-        sys.exit(1)
-
-    if lib.targetIsEmpty(args) and args.level == "auto":
-        logging.info("Backup mode auto, target folder is empty: executing full backup.")
-        args.level = "full"
-    elif not lib.targetIsEmpty(args) and args.level == "auto":
-        if not lib.hasFullBackup(args):
-            logging.error(
-                "Can't execute switch to auto incremental backup: "
-                "specified target folder [%s] does not contain full backup.",
-                args.output,
-            )
-            sys.exit(1)
-        logging.info("Backup mode auto: executing incremental backup.")
-        args.level = "inc"
-    elif not args.stdout and not args.startonly and not args.killonly:
-        if not lib.targetIsEmpty(args):
-            logging.error("Target directory already contains full or copy backup.")
-            sys.exit(1)
-
     if args.raw is True and args.level in ("inc", "diff"):
         logging.warning(
             "Raw disks can't be included during incremental or differential backup."
@@ -368,17 +345,55 @@ def main() -> None:
     except exceptions.CheckpointException:
         sys.exit(1)
 
-    if domObj.isActive() == 0:
-        if args.level == "full":
-            logging.warning("Domain is offline, resetting backup options.")
-            args.level = "copy"
-            logging.warning("New Backup level: [%s].", args.level)
+    if args.level in ("full", "inc", "diff") and domObj.isActive() == 0:
+        args.offline = True
+        if args.start_domain is True:
+            logging.info("Starting offline VM in paused state")
+            if virtClient.startDomain(domObj) == 0:
+                args.offline = False
+            else:
+                logging.info("Failed to start VM in paused mode.")
+
+    if args.offline is True:
+        logging.warning("Domain is offline, resetting backup options.")
+        args.level = "copy"
+        logging.warning("New Backup level: [%s].", args.level)
         args.offline = True
 
     if args.offline is True and args.startonly is True:
         logging.error("Virtual machine is currently offline")
         logging.error("Virtual machine must be active for this function.")
         sys.exit(1)
+
+    if (
+        args.level not in ("copy", "full", "auto")
+        and not lib.hasFullBackup(args)
+        and not args.stdout
+    ):
+        logging.error(
+            "Unable to execute [%s] backup: No full backup found in target directory: [%s]",
+            args.level,
+            args.output,
+        )
+        sys.exit(1)
+
+    if lib.targetIsEmpty(args) and args.level == "auto":
+        logging.info("Backup mode auto, target folder is empty: executing full backup.")
+        args.level = "full"
+    elif not lib.targetIsEmpty(args) and args.level == "auto":
+        if not lib.hasFullBackup(args):
+            logging.error(
+                "Can't execute switch to auto incremental backup: "
+                "specified target folder [%s] does not contain full backup.",
+                args.output,
+            )
+            sys.exit(1)
+        logging.info("Backup mode auto: executing incremental backup.")
+        args.level = "inc"
+    elif not args.stdout and not args.startonly and not args.killonly:
+        if not lib.targetIsEmpty(args):
+            logging.error("Target directory already contains full or copy backup.")
+            sys.exit(1)
 
     signal.signal(
         signal.SIGINT,
